--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
     font-family: Helvetica;
 }
 
+img {
+    width: 100%;
+}
+
 h1 {
     margin: 15px 0;
 }
@@ -58,13 +62,7 @@ h2 {
     font-variant: small-caps;
     letter-spacing: 1px;
 }
-#SWROTS {
-    background: #424242;
-    width: 400px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
+
 
 .speaking-scene {
     background: #424242;
