--- a/style.css
+++ b/style.css
@@ -11,11 +11,13 @@ img {
 
 h1 {
     margin: 15px 0;
+    color: black;
 }
 
 h2 {
     margin: 0;
     font-weight: 100;
+    color: black;
 }
 
 .card {
@@ -62,7 +64,6 @@ h2 {
     font-variant: small-caps;
     letter-spacing: 1px;
 }
-
 
 .speaking-scene {
     background: #424242;
