--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ h2 {
     grid-row: 1;
     border-radius: 5px;
     background-color:#424242;
-    border: 2px solid rgb(90, 5, 5);
+    border: 2px solid rgb(79,185,227);
     position: relative;
     text-align: center;
 }
