--- a/style.css
+++ b/style.css
@@ -82,10 +82,12 @@ h2 {
     grid-column: 1;
     grid-row: 1;
     border-radius: 5px;
-    background-color:#424242;
+    background-color:#ffffff;
     border: 2px solid rgb(79,185,227);
     position: relative;
     text-align: center;
+    font-family: Helvetica;
+    color: black;
 }
 
 .box2 {
