--- a/style.css
+++ b/style.css
@@ -55,8 +55,11 @@ h2 {
 }
 
 .AS {
-    font-family: Courier;
+    font-family: Helvetica;
     color: rgb(19, 179, 228);
+    text-align: center;
+    font-size: 3em;
+    text-decoration: underline;
 }
 
 #Movie-header {
