--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ h2 {
     font-family: Helvetica;
     color: rgb(19, 179, 228);
     text-align: center;
-    font-size: 3em;
+    font-size: 2em;
     text-decoration: underline;
 }
 
@@ -70,7 +70,7 @@ h2 {
 
 .speaking-scene {
     background: #424242;
-    padding: 3px;
+    padding: 2px;
 }
 
 .speaking-scene-new {
@@ -133,3 +133,35 @@ span {
     top: 50%;
     transform: translate(-50%, -50%);
   }
+
+.courses-ordered {
+    display: grid;
+    grid-column-gap: 5px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+    margin-bottom: auto;
+}
+
+.list1 {
+    grid-column: 1;
+    grid-row: 1;
+    border-radius: 5px;
+    background-color:#ffffff;
+    border: 2px solid rgb(79,185,227);
+    position: relative;
+    text-align: left;
+    font-family: Helvetica;
+    color: black;
+}
+
+.list2 {
+    grid-column: 2;
+    grid-row: 1;
+    border-radius: 5px;
+    background-color:#ffffff;
+    border: 2px solid rgb(79,185,227);
+    position: relative;
+    text-align: left;
+    font-family: Helvetica;
+    color: black;
+}
