--- a/style.css
+++ b/style.css
@@ -57,20 +57,15 @@ h2 {
 .AS {
     font-family: Helvetica;
     color: rgb(19, 179, 228);
-    text-align: center;
+    text-align: left;
     font-size: 2em;
     text-decoration: underline;
 }
 
-#Movie-header {
-    color: rgb(228, 214, 20);
-    font-variant: small-caps;
-    letter-spacing: 1px;
-}
-
 .speaking-scene {
     background: #424242;
-    padding: 2px;
+    padding: 1px;
+    font-size: 14;
 }
 
 .speaking-scene-new {
@@ -139,7 +134,6 @@ span {
     grid-column-gap: 5px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 10px;
-    margin-bottom: auto;
 }
 
 .list1 {
@@ -156,6 +150,17 @@ span {
 
 .list2 {
     grid-column: 2;
+    grid-row: 1;
+    border-radius: 5px;
+    background-color:#ffffff;
+    border: 2px solid rgb(79,185,227);
+    position: relative;
+    text-align: left;
+    font-family: Helvetica;
+    color: black;
+}
+.list2 {
+    grid-column: 3;
     grid-row: 1;
     border-radius: 5px;
     background-color:#ffffff;
