--- a/style.css
+++ b/style.css
@@ -63,11 +63,11 @@ h2 {
 }
 
 .speaking-scene {
-    background: #424242;
+    background: #302f2f;
     padding: 1px;
     font-size: 16;
     border-radius: 5px;
-    border: 2px solid rgb(79,185,227);
+    border: 2px solid rgb(46, 143, 182);
 }
 
 .speaking-scene-new {
@@ -91,7 +91,7 @@ h2 {
 }
 
 .box2 {
-    grid-column: 1;
+    grid-column: 3;
     grid-row: 1;
     border-radius: 5px;
     background-color:#ffffff;
